// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`buildAdaptiveSynthesisReport structure snapshots (per schema type) has all required sections for schema contested_empirical 1`] = `
{
  "biasAndBlindSpots": [],
  "certaintyAssessment": "Run certainty 66% (gate: caution). 1 claim(s) at consensus/majority, 1 split.",
  "degraded": true,
  "disagreements": [
    {
      "positions": [
        {
          "modelId": "chatgpt",
          "position": "chatgpt excerpt",
        },
        {
          "modelId": "claude",
          "position": "claude excerpt",
        },
      ],
      "stakes": "important",
      "topic": "Split claim",
      "whyTheyDiffer": "Models take different positions on this point — see each model's excerpt below.",
    },
  ],
  "executiveSummary": "Consensus claim (GPT 5.2, Claude Opus 4.5, Grok 4). The panel reached consensus or majority agreement on 1 claim and split on 1 claim.",
  "gate": "caution",
  "narrativeSections": [],
  "panelVerdict": "3/5 models converge on Consensus claim; certainty 66%; gate: caution.",
  "runCertainty": 0.66,
  "unifiedAnswer": "Consensus claim (GPT 5.2, Claude Opus 4.5, Grok 4).",
  "verdictCard": {
    "caveat": null,
    "consensusModelCount": 3,
    "disagreementDetail": "Models take different positions — see the disagreement card below for each model's stance.",
    "disagreementModelCount": 2,
    "keyDisagreement": "Split claim",
    "question": "Test question",
    "recommendedNextSteps": [
      "Treat the key disagreement as unresolved — don't rely on either side without independent verification.",
      "Re-run with additional models or a narrower question if this decision is time-sensitive.",
      "Flag the caveat below to anyone else relying on this synthesis.",
    ],
    "topConsensus": "Consensus claim",
  },
  "whereModelsAgree": [
    "Consensus claim",
  ],
  "whereModelsDisagree": [
    "Split claim",
  ],
}
`;

exports[`buildAdaptiveSynthesisReport structure snapshots (per schema type) has all required sections for schema creative_generative 1`] = `
{
  "biasAndBlindSpots": [],
  "certaintyAssessment": "Run certainty 66% (gate: caution). 1 claim(s) at consensus/majority, 1 split.",
  "degraded": true,
  "disagreements": [
    {
      "positions": [
        {
          "modelId": "chatgpt",
          "position": "chatgpt excerpt",
        },
        {
          "modelId": "claude",
          "position": "claude excerpt",
        },
      ],
      "stakes": "important",
      "topic": "Split claim",
      "whyTheyDiffer": "Models take different positions on this point — see each model's excerpt below.",
    },
  ],
  "executiveSummary": "Consensus claim (GPT 5.2, Claude Opus 4.5, Grok 4). The panel reached consensus or majority agreement on 1 claim and split on 1 claim.",
  "gate": "caution",
  "narrativeSections": [],
  "panelVerdict": "3/5 models converge on Consensus claim; certainty 66%; gate: caution.",
  "runCertainty": 0.66,
  "unifiedAnswer": "Consensus claim (GPT 5.2, Claude Opus 4.5, Grok 4).",
  "verdictCard": {
    "caveat": null,
    "consensusModelCount": 3,
    "disagreementDetail": "Models take different positions — see the disagreement card below for each model's stance.",
    "disagreementModelCount": 2,
    "keyDisagreement": "Split claim",
    "question": "Test question",
    "recommendedNextSteps": [
      "Treat the key disagreement as unresolved — don't rely on either side without independent verification.",
      "Re-run with additional models or a narrower question if this decision is time-sensitive.",
      "Flag the caveat below to anyone else relying on this synthesis.",
    ],
    "topConsensus": "Consensus claim",
  },
  "whereModelsAgree": [
    "Consensus claim",
  ],
  "whereModelsDisagree": [
    "Split claim",
  ],
}
`;

exports[`buildAdaptiveSynthesisReport structure snapshots (per schema type) has all required sections for schema factual_lookup 1`] = `
{
  "biasAndBlindSpots": [],
  "certaintyAssessment": "Run certainty 66% (gate: caution). 1 claim(s) at consensus/majority, 1 split.",
  "degraded": true,
  "disagreements": [
    {
      "positions": [
        {
          "modelId": "chatgpt",
          "position": "chatgpt excerpt",
        },
        {
          "modelId": "claude",
          "position": "claude excerpt",
        },
      ],
      "stakes": "important",
      "topic": "Split claim",
      "whyTheyDiffer": "Models take different positions on this point — see each model's excerpt below.",
    },
  ],
  "executiveSummary": "Consensus claim (GPT 5.2, Claude Opus 4.5, Grok 4). The panel reached consensus or majority agreement on 1 claim and split on 1 claim.",
  "gate": "caution",
  "narrativeSections": [],
  "panelVerdict": "3/5 models converge on Consensus claim; certainty 66%; gate: caution.",
  "runCertainty": 0.66,
  "unifiedAnswer": "Consensus claim (GPT 5.2, Claude Opus 4.5, Grok 4).",
  "verdictCard": {
    "caveat": null,
    "consensusModelCount": 3,
    "disagreementDetail": "Models take different positions — see the disagreement card below for each model's stance.",
    "disagreementModelCount": 2,
    "keyDisagreement": "Split claim",
    "question": "Test question",
    "recommendedNextSteps": [
      "Treat the key disagreement as unresolved — don't rely on either side without independent verification.",
      "Re-run with additional models or a narrower question if this decision is time-sensitive.",
      "Flag the caveat below to anyone else relying on this synthesis.",
    ],
    "topConsensus": "Consensus claim",
  },
  "whereModelsAgree": [
    "Consensus claim",
  ],
  "whereModelsDisagree": [
    "Split claim",
  ],
}
`;

exports[`buildAdaptiveSynthesisReport structure snapshots (per schema type) has all required sections for schema financial_valuation 1`] = `
{
  "biasAndBlindSpots": [],
  "certaintyAssessment": "Run certainty 66% (gate: caution). 1 claim(s) at consensus/majority, 1 split.",
  "degraded": true,
  "disagreements": [
    {
      "positions": [
        {
          "modelId": "chatgpt",
          "position": "chatgpt excerpt",
        },
        {
          "modelId": "claude",
          "position": "claude excerpt",
        },
      ],
      "stakes": "important",
      "topic": "Split claim",
      "whyTheyDiffer": "Models take different positions on this point — see each model's excerpt below.",
    },
  ],
  "executiveSummary": "Consensus claim (GPT 5.2, Claude Opus 4.5, Grok 4). The panel reached consensus or majority agreement on 1 claim and split on 1 claim.",
  "gate": "caution",
  "narrativeSections": [],
  "panelVerdict": "3/5 models converge on Consensus claim; certainty 66%; gate: caution.",
  "runCertainty": 0.66,
  "unifiedAnswer": "Consensus claim (GPT 5.2, Claude Opus 4.5, Grok 4).",
  "verdictCard": {
    "caveat": null,
    "consensusModelCount": 3,
    "disagreementDetail": "Models take different positions — see the disagreement card below for each model's stance.",
    "disagreementModelCount": 2,
    "keyDisagreement": "Split claim",
    "question": "Test question",
    "recommendedNextSteps": [
      "Treat the key disagreement as unresolved — don't rely on either side without independent verification.",
      "Re-run with additional models or a narrower question if this decision is time-sensitive.",
      "Flag the caveat below to anyone else relying on this synthesis.",
    ],
    "topConsensus": "Consensus claim",
  },
  "whereModelsAgree": [
    "Consensus claim",
  ],
  "whereModelsDisagree": [
    "Split claim",
  ],
}
`;

exports[`buildAdaptiveSynthesisReport structure snapshots (per schema type) has all required sections for schema forecast_speculative 1`] = `
{
  "biasAndBlindSpots": [],
  "certaintyAssessment": "Run certainty 66% (gate: caution). 1 claim(s) at consensus/majority, 1 split.",
  "degraded": true,
  "disagreements": [
    {
      "positions": [
        {
          "modelId": "chatgpt",
          "position": "chatgpt excerpt",
        },
        {
          "modelId": "claude",
          "position": "claude excerpt",
        },
      ],
      "stakes": "important",
      "topic": "Split claim",
      "whyTheyDiffer": "Models take different positions on this point — see each model's excerpt below.",
    },
  ],
  "executiveSummary": "Consensus claim (GPT 5.2, Claude Opus 4.5, Grok 4). The panel reached consensus or majority agreement on 1 claim and split on 1 claim.",
  "gate": "caution",
  "narrativeSections": [],
  "panelVerdict": "3/5 models converge on Consensus claim; certainty 66%; gate: caution.",
  "runCertainty": 0.66,
  "unifiedAnswer": "Consensus claim (GPT 5.2, Claude Opus 4.5, Grok 4).",
  "verdictCard": {
    "caveat": null,
    "consensusModelCount": 3,
    "disagreementDetail": "Models take different positions — see the disagreement card below for each model's stance.",
    "disagreementModelCount": 2,
    "keyDisagreement": "Split claim",
    "question": "Test question",
    "recommendedNextSteps": [
      "Treat the key disagreement as unresolved — don't rely on either side without independent verification.",
      "Re-run with additional models or a narrower question if this decision is time-sensitive.",
      "Flag the caveat below to anyone else relying on this synthesis.",
    ],
    "topConsensus": "Consensus claim",
  },
  "whereModelsAgree": [
    "Consensus claim",
  ],
  "whereModelsDisagree": [
    "Split claim",
  ],
}
`;

exports[`buildAdaptiveSynthesisReport structure snapshots (per schema type) has all required sections for schema generic 1`] = `
{
  "biasAndBlindSpots": [],
  "certaintyAssessment": "Run certainty 66% (gate: caution). 1 claim(s) at consensus/majority, 1 split.",
  "degraded": true,
  "disagreements": [
    {
      "positions": [
        {
          "modelId": "chatgpt",
          "position": "chatgpt excerpt",
        },
        {
          "modelId": "claude",
          "position": "claude excerpt",
        },
      ],
      "stakes": "important",
      "topic": "Split claim",
      "whyTheyDiffer": "Models take different positions on this point — see each model's excerpt below.",
    },
  ],
  "executiveSummary": "Consensus claim (GPT 5.2, Claude Opus 4.5, Grok 4). The panel reached consensus or majority agreement on 1 claim and split on 1 claim.",
  "gate": "caution",
  "narrativeSections": [],
  "panelVerdict": "3/5 models converge on Consensus claim; certainty 66%; gate: caution.",
  "runCertainty": 0.66,
  "unifiedAnswer": "Consensus claim (GPT 5.2, Claude Opus 4.5, Grok 4).",
  "verdictCard": {
    "caveat": null,
    "consensusModelCount": 3,
    "disagreementDetail": "Models take different positions — see the disagreement card below for each model's stance.",
    "disagreementModelCount": 2,
    "keyDisagreement": "Split claim",
    "question": "Test question",
    "recommendedNextSteps": [
      "Treat the key disagreement as unresolved — don't rely on either side without independent verification.",
      "Re-run with additional models or a narrower question if this decision is time-sensitive.",
      "Flag the caveat below to anyone else relying on this synthesis.",
    ],
    "topConsensus": "Consensus claim",
  },
  "whereModelsAgree": [
    "Consensus claim",
  ],
  "whereModelsDisagree": [
    "Split claim",
  ],
}
`;

exports[`buildAdaptiveSynthesisReport structure snapshots (per schema type) has all required sections for schema legal_regulatory 1`] = `
{
  "biasAndBlindSpots": [],
  "certaintyAssessment": "Run certainty 66% (gate: caution). 1 claim(s) at consensus/majority, 1 split.",
  "degraded": true,
  "disagreements": [
    {
      "positions": [
        {
          "modelId": "chatgpt",
          "position": "chatgpt excerpt",
        },
        {
          "modelId": "claude",
          "position": "claude excerpt",
        },
      ],
      "stakes": "important",
      "topic": "Split claim",
      "whyTheyDiffer": "Models take different positions on this point — see each model's excerpt below.",
    },
  ],
  "executiveSummary": "Consensus claim (GPT 5.2, Claude Opus 4.5, Grok 4). The panel reached consensus or majority agreement on 1 claim and split on 1 claim.",
  "gate": "caution",
  "narrativeSections": [],
  "panelVerdict": "3/5 models converge on Consensus claim; certainty 66%; gate: caution.",
  "runCertainty": 0.66,
  "unifiedAnswer": "Consensus claim (GPT 5.2, Claude Opus 4.5, Grok 4).",
  "verdictCard": {
    "caveat": null,
    "consensusModelCount": 3,
    "disagreementDetail": "Models take different positions — see the disagreement card below for each model's stance.",
    "disagreementModelCount": 2,
    "keyDisagreement": "Split claim",
    "question": "Test question",
    "recommendedNextSteps": [
      "Treat the key disagreement as unresolved — don't rely on either side without independent verification.",
      "Re-run with additional models or a narrower question if this decision is time-sensitive.",
      "Flag the caveat below to anyone else relying on this synthesis.",
    ],
    "topConsensus": "Consensus claim",
  },
  "whereModelsAgree": [
    "Consensus claim",
  ],
  "whereModelsDisagree": [
    "Split claim",
  ],
}
`;

exports[`buildAdaptiveSynthesisReport structure snapshots (per schema type) has all required sections for schema medical_health 1`] = `
{
  "biasAndBlindSpots": [],
  "certaintyAssessment": "Run certainty 66% (gate: caution). 1 claim(s) at consensus/majority, 1 split.",
  "degraded": true,
  "disagreements": [
    {
      "positions": [
        {
          "modelId": "chatgpt",
          "position": "chatgpt excerpt",
        },
        {
          "modelId": "claude",
          "position": "claude excerpt",
        },
      ],
      "stakes": "important",
      "topic": "Split claim",
      "whyTheyDiffer": "Models take different positions on this point — see each model's excerpt below.",
    },
  ],
  "executiveSummary": "Consensus claim (GPT 5.2, Claude Opus 4.5, Grok 4). The panel reached consensus or majority agreement on 1 claim and split on 1 claim.",
  "gate": "caution",
  "narrativeSections": [],
  "panelVerdict": "3/5 models converge on Consensus claim; certainty 66%; gate: caution.",
  "runCertainty": 0.6599999999999999,
  "unifiedAnswer": "Consensus claim (GPT 5.2, Claude Opus 4.5, Grok 4).",
  "verdictCard": {
    "caveat": null,
    "consensusModelCount": 3,
    "disagreementDetail": "Models take different positions — see the disagreement card below for each model's stance.",
    "disagreementModelCount": 2,
    "keyDisagreement": "Split claim",
    "question": "Test question",
    "recommendedNextSteps": [
      "Treat the key disagreement as unresolved — don't rely on either side without independent verification.",
      "Re-run with additional models or a narrower question if this decision is time-sensitive.",
      "Flag the caveat below to anyone else relying on this synthesis.",
    ],
    "topConsensus": "Consensus claim",
  },
  "whereModelsAgree": [
    "Consensus claim",
  ],
  "whereModelsDisagree": [
    "Split claim",
  ],
}
`;

exports[`buildAdaptiveSynthesisReport structure snapshots (per schema type) has all required sections for schema procedural 1`] = `
{
  "biasAndBlindSpots": [],
  "certaintyAssessment": "Run certainty 66% (gate: caution). 1 claim(s) at consensus/majority, 1 split.",
  "degraded": true,
  "disagreements": [
    {
      "positions": [
        {
          "modelId": "chatgpt",
          "position": "chatgpt excerpt",
        },
        {
          "modelId": "claude",
          "position": "claude excerpt",
        },
      ],
      "stakes": "important",
      "topic": "Split claim",
      "whyTheyDiffer": "Models take different positions on this point — see each model's excerpt below.",
    },
  ],
  "executiveSummary": "Consensus claim (GPT 5.2, Claude Opus 4.5, Grok 4). The panel reached consensus or majority agreement on 1 claim and split on 1 claim.",
  "gate": "caution",
  "narrativeSections": [],
  "panelVerdict": "3/5 models converge on Consensus claim; certainty 66%; gate: caution.",
  "runCertainty": 0.66,
  "unifiedAnswer": "Consensus claim (GPT 5.2, Claude Opus 4.5, Grok 4).",
  "verdictCard": {
    "caveat": null,
    "consensusModelCount": 3,
    "disagreementDetail": "Models take different positions — see the disagreement card below for each model's stance.",
    "disagreementModelCount": 2,
    "keyDisagreement": "Split claim",
    "question": "Test question",
    "recommendedNextSteps": [
      "Treat the key disagreement as unresolved — don't rely on either side without independent verification.",
      "Re-run with additional models or a narrower question if this decision is time-sensitive.",
      "Flag the caveat below to anyone else relying on this synthesis.",
    ],
    "topConsensus": "Consensus claim",
  },
  "whereModelsAgree": [
    "Consensus claim",
  ],
  "whereModelsDisagree": [
    "Split claim",
  ],
}
`;
